# blablatotext

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  audio_summary.py  pyproject.toml
scripts/: apigw-setup.sh  apigw-update-ip.sh  ecr-push.sh  ecs-destroy.sh  ecs-setup.sh  efs-init.sh  get-ip.sh  scheduler-disable.sh  scheduler-enable.sh
src/blablatotext/: __init__.py  api.py  config.py  main.py  summarizer.py  transcriber.py
tests/: conftest.py  test_api.py  test_cli.py  test_summarizer.py  test_transcriber.py
